--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: "nowtvtext-regular";
+  src: local("nowtvtext-regular"), url("./fonts/nowtvtext-regular.woff2") format("woff2");
+  /* font-display: fallback; */
+}
+@font-face {
+  font-family: "nowtvtext-bold";
+  src: local("nowtvtext-bold"), url("./fonts/nowtvtext-bold.woff2") format("woff2");
+  /* font-display: fallback; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  font-family: nowtvtext-regular, Helvetica, Arial, sans-serif;
+  color: #142423;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  font-family: nowtvtext-bold, nowtvtext-regular, Helvetica, Arial, sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  --dark-green: #00676E;
+  --light-grey: #d8d8dd;
+  --white-text: #ffffff; 
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-width: 56.25rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app header {
+  margin: 4rem auto;
+  text-align: center;
 }
