--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,35 @@ h1 {
   margin: 4rem auto;
   text-align: center;
 }
+
+.schedule table {
+  border-collapse: collapse;
+}
+
+.schedule button {
+  background-color: transparent;
+  border-color: transparent;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.schedule .empty {
+  border-top-color: transparent;
+  border-left-color: transparent;
+}
+
+.schedule .button-line {
+  margin-top: 0.2rem;
+}
+
+.schedule th {
+  background-color: var(--dark-green);
+  color: var(--white-text);
+}
+
+.schedule td,
+.schedule th {
+  padding: 12px 18px;
+  border: 1px solid var(--light-grey);
+  vertical-align: top;
+}
