feat: change part of the schedule and style

--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,36 @@
 @font-face {
-  font-family: "nowtvtext-regular";
-  src: local("nowtvtext-regular"), url("./fonts/nowtvtext-regular.woff2") format("woff2");
-  /* font-display: fallback; */
+  font-family: "sky-regular";
+  src: local("sky-regular"), url("./fonts/sky-regular.woff") format("woff");
+  font-display: fallback;
 }
 @font-face {
-  font-family: "nowtvtext-bold";
-  src: local("nowtvtext-bold"), url("./fonts/nowtvtext-bold.woff2") format("woff2");
-  /* font-display: fallback; */
+  font-family: "sky-medium";
+  src: local("sky-medium"), url("./fonts/sky-medium.woff") format("woff");
+  font-display: fallback;
 }
 
 * {
-  font-family: nowtvtext-regular, Helvetica, Arial, sans-serif;
-  color: #142423;
+  font-family: sky-regular, Helvetica, Arial, sans-serif;
 }
 
-h1 {
-  font-family: nowtvtext-bold, nowtvtext-regular, Helvetica, Arial, sans-serif;
+h1, h2 {
+  font-family: sky-medium, sky-regular, Helvetica, Arial, sans-serif;
+  font-size: 2rem;
+  margin: 0.67rem 0;
+}
+
+:root {
+  --orange: #b65f02;
+  --bloodorange: #b13406;
+  --red: #b20617;
+  --purple: #9b1c5c;
+  --violet: #3b2f89;
+  --blue: #1045a8;
+  --light-grey: #d8d8dd;
+  --white: #ffffff; 
 }
 
 .app {
-  --dark-green: #00676E;
-  --light-grey: #d8d8dd;
-  --white-text: #ffffff; 
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -55,8 +63,26 @@ h1 {
 }
 
 .schedule th {
-  background-color: var(--dark-green);
-  color: var(--white-text);
+  color: var(--white);
+}
+
+.schedule th:nth-child(1) {
+  background-color: var(--orange);
+}
+.schedule th:nth-child(2) {
+  background-color: var(--bloodorange);
+}
+.schedule th:nth-child(3) {
+  background-color: var(--red);
+}
+.schedule th:nth-child(4) {
+  background-color: var(--purple);
+}
+.schedule th:nth-child(5) {
+  background-color: var(--violet);
+}
+.schedule th:nth-child(6) {
+  background-color: var(--blue);
 }
 
 .schedule td,
@@ -64,4 +90,23 @@ h1 {
   padding: 12px 18px;
   border: 1px solid var(--light-grey);
   vertical-align: top;
+}
+
+.close-button {
+  background: var(--purple);
+  border-width: 0;
+  border-radius: 4rem;
+  padding: 0.65rem 1.5rem;
+  color: var(--white);
+  cursor: pointer;
+  font-family: sky-medium, sky-regular, Helvetica, Arial, sans-serif;
+  transition: background-color 0.25s;
+}
+
+.close-button:hover {
+  background-color: var(--red);
+}
+
+.close-button:active {
+  background-color: var(--violet);
 }
